<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".SplashActivity">

    <TableLayout
        android:id="@+id/tl_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="#000000"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vacio"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.40">

            <VideoView
                android:id="@+id/vv_intro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/in_leyend"
                    android:textColor="@color/colorSecondaryIcons"
                    android:textStyle="bold"
                    android:textSize="@dimen/intro_title"
                    android:layout_weight="50"
                    android:textAppearance="@style/textAppearance"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/in_cincuenta"
                    android:textColor="@color/colorSecondaryIcons"
                    android:textStyle="bold"
                    android:textSize="@dimen/intro_subtitle"
                    android:layout_weight="50"
                    android:textAppearance="@style/textAppearance"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vacio"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="RED ERBOL"
                android:textColor="@color/colorSecondaryIcons"
                android:textStyle="bold"
                android:textSize="@dimen/size_title"
                android:layout_weight="1"
                android:textAppearance="@style/textAppearance"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.80">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_menu"
                    android:layout_weight="33.33">

                    <ImageView
                        android:id="@+id/iv_logoradio"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_radio"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/radio"
                            android:textStyle="bold"
                            android:id="@+id/tv_tradio"
                            android:textSize="@dimen/size_menutitle"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_cradio"
                            android:id="@+id/tv_instradio"
                            android:textSize="@dimen/size_menucont"
                            android:textColor="@color/colorPrimary"/>

                        <View
                            android:id="@+id/v_lradio"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/colorBorderButton">

                        </View>

                        <Button
                            android:id="@+id/btn_cradio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/btn_init"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryIcons"
                            android:background="@drawable/btn_menu" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_menu"
                    android:layout_weight="33.33">

                    <ImageView
                        android:id="@+id/iv_logonews"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_news"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_tnews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/news"
                            android:textStyle="bold"
                            android:textSize="@dimen/size_menutitle"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_cnews"
                            android:id="@+id/tv_instnews"
                            android:textSize="@dimen/size_menucont"
                            android:textColor="@color/colorPrimary"/>

                        <View
                            android:id="@+id/v_lnews"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/colorDivider">

                        </View>

                        <Button
                            android:id="@+id/btn_cnews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/btn_init"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryIcons"
                            android:background="@drawable/btn_menu" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/background_menu"
                    android:layout_weight="33.33">

                    <ImageView
                        android:id="@+id/iv_logotv"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_conflict"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_ttv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/tvs"
                            android:textStyle="bold"
                            android:textSize="@dimen/size_menutitle"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_ctv"
                            android:id="@+id/tv_insttv"
                            android:textSize="@dimen/size_menucont"
                            android:textColor="@color/colorPrimary"/>

                        <View
                            android:id="@+id/v_ltv"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/colorDivider">

                        </View>

                        <Button
                            android:id="@+id/btn_cmeter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/btn_init"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryIcons"
                            android:background="@drawable/btn_menu" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</RelativeLayout>